--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_auth: 3.3.9
   google_sign_in: 5.2.4
   flutter_login_facebook: 1.4.1
+  provider: 6.0.2
 
 dev_dependencies:
   flutter_test:
