--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   google_sign_in: 5.2.4
   flutter_login_facebook: 1.4.1
   provider: 6.0.2
+  cloud_firestore: 3.1.11
 
 dev_dependencies:
   flutter_test:
