--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_login_facebook: 1.4.1
   provider: 6.0.2
   cloud_firestore: 3.1.11
+  intl: 0.17.0
 
 dev_dependencies:
   flutter_test:
