--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   provider: 6.0.2
   cloud_firestore: 3.1.11
   intl: 0.17.0
+  rxdart: 0.27.3
 
 dev_dependencies:
   flutter_test:
